exercise for day 2 code add

--- a/grid-system-cols-noscr.html
+++ b/grid-system-cols-noscr.html
@@ -23,14 +23,14 @@
    <body>
       <div class = "grid_system">
          <div class = "row">
-            <div class = "col">.col</div>
-            <div class = "col">.col</div>
-            <div class = "col">.col</div>
+            <div class = "col-md-7">.col</div>
+            <div class = "col-md-7">.col</div>
+            <div class = "col-sm-12">.col</div>
          </div>
          
          <div class = "row">
-            <div class = "col">.col</div>
-            <div class = "col">.col</div>
+            <div class = "col-sm-7">.col</div>
+            <div class = "col-sm-4">.col</div>
          </div>
       </div>
       
